# FracturedMediaSolvers

./: .gitignore  .gitmodules  README.md
FVCode3D/: .gitignore  CMakeLists.txt  README  README-MOX  RELEASE  codeblocks_project.sh  config.sh  create-archive.sh  data.txt  eclipse_project.sh  functions.hpp  install-devel.sh  install-eclipse-luca.sh  install-eclipse-project.sh  install-lucaPC.sh  install-mox.sh  install.sh  main.cpp  notes.tex  project-config  tag-release.sh
FVCode3D/FVCode3D/: FVCode3D.hpp
FVCode3D/FVCode3D/assembler/: Stiffness.cpp
FVCode3D/FVCode3D/core/: BasicType.hpp  Data.hpp
FVCode3D/FVCode3D/eigenPatch/: RangeSupport.hpp
FVCode3D/FVCode3D/export/: Export.hpp
FVCode3D/FVCode3D/geometry/: CoordinateSystem.cpp  Point3D.cpp
FVCode3D/FVCode3D/mesh/: Mesh3D.cpp  RigidMesh.hpp  TetGenWrapper.cpp
FVCode3D/FVCode3D/problem/: DarcyPseudoSteady.hpp  DarcySteady.hpp
FVCode3D/FVCode3D/property/: Permeability.cpp  Properties.cpp
FVCode3D/FVCode3D/quadrature/: Quadrature.hpp
FVCode3D/FVCode3D/solver/: Solver.cpp
FVCode3D/FVCode3D/utility/: Matrix.hpp
FVCode3D/MatlabUtilities/: README
FVCode3D/cmake/: CodeCoverage.cmake  CopyFilesToBinaryDir.cmake  FindSamg.cmake  FindThirdPartyLibrary.cmake  FindUMFPACK.cmake  IncludeFunctions.cmake  InstallCMakeConfigFiles.cmake  InstallFilesWithDirectoryStructure.cmake  LinkFilesToBinaryDir.cmake  ProjectConfig.cmake.in
FVCode3D/data/: cubePolyF2.fvg  cubePolyF3.fvg  fiveXfive.fvg  polyGrid3.fvg  solverMesh_Cart_noExt_new1e3.fvg  solverMesh_Cart_topBottom_new1e3.fvg  tetraBC1.fvg  twoXTwo.fvg  twoXTwoXTwo.fvg
FVCode3D/data/TPFA/: grid1.grid  test.grid  test_poly.grid
FVCode3D/data/forSolver/: provaSolver.grid
FVCode3D/doc/: CMakeLists.txt  Doxyfile.in  main_page.txt
FVCode3D/doc/@CMAKE_CURRENT_BINARY_DIR@/html/: BC_8cpp.html  BC_8cpp__incl.map  BC_8cpp__incl.md5  BC_8cpp_source.html  BC_8hpp.html  BC_8hpp__dep__incl.map  BC_8hpp__dep__incl.md5  BC_8hpp__incl.map  BC_8hpp__incl.md5  BC_8hpp_source.html  BasicType_8hpp.html  BasicType_8hpp__dep__incl.map  BasicType_8hpp__dep__incl.md5  BasicType_8hpp__incl.map  BasicType_8hpp__incl.md5  BasicType_8hpp_source.html  BoundingBox_8cpp.html  BoundingBox_8cpp__incl.map  BoundingBox_8cpp__incl.md5  BoundingBox_8cpp_source.html  BoundingBox_8hpp.html  BoundingBox_8hpp__dep__incl.map  BoundingBox_8hpp__dep__incl.md5  BoundingBox_8hpp__incl.map  BoundingBox_8hpp__incl.md5  BoundingBox_8hpp_source.html  CartesianGrid_8cpp.html  CartesianGrid_8cpp__incl.map  CartesianGrid_8cpp__incl.md5  CartesianGrid_8cpp_source.html  CartesianGrid_8hpp.html  CartesianGrid_8hpp__dep__incl.map  CartesianGrid_8hpp__dep__incl.md5  CartesianGrid_8hpp__incl.map  CartesianGrid_8hpp__incl.md5  CartesianGrid_8hpp_source.html  Chrono_8hpp.html  Chrono_8hpp__dep__incl.map  Chrono_8hpp__dep__incl.md5  Chrono_8hpp__incl.map  (+2131 more)
FVCode3D/doc/@CMAKE_CURRENT_BINARY_DIR@/latex/: BC_8cpp.tex  BC_8cpp__incl.md5  BC_8cpp_source.tex  BC_8hpp.tex  BC_8hpp__dep__incl.md5  BC_8hpp__incl.md5  BC_8hpp_source.tex  BasicType_8hpp.tex  BasicType_8hpp__dep__incl.md5  BasicType_8hpp__incl.md5  BasicType_8hpp_source.tex  BoundingBox_8cpp.tex  BoundingBox_8cpp__incl.md5  BoundingBox_8cpp_source.tex  BoundingBox_8hpp.tex  BoundingBox_8hpp__dep__incl.md5  BoundingBox_8hpp__incl.md5  BoundingBox_8hpp_source.tex  CartesianGrid_8cpp.tex  CartesianGrid_8cpp__incl.md5  CartesianGrid_8cpp_source.tex  CartesianGrid_8hpp.tex  CartesianGrid_8hpp__dep__incl.md5  CartesianGrid_8hpp__incl.md5  Chrono_8hpp.tex  (+1058 more)
FVCode3D/include/: GetPot
FVCode3D/installer/: argument-parsing  build  config  progress-printing
FVCode3D/installer/scripts/: pkgbuild  pkgbuild_blas  pkgbuild_cmake  pkgbuild_eigen  pkgbuild_lapack  pkgbuild_suitesparse
FVCode3D/installer/src/: .gitignore  readme
FVCode3D/src/: CMakeLists.txt  FVCode3D.hpp  data.txt  functions.hpp  main.cpp
FVCode3D/src/FVCode3D/: CMakeLists.txt  FVCode3D.hpp  samg.h
FVCode3D/src/assembler/: FixPressureDofs.hpp  FluxReconstruction.cpp  FluxReconstruction.hpp  Mass.cpp  Mass.hpp  MatrixHandler.hpp  Stiffness.cpp  Stiffness.hpp  fixPressureDofs.hpp  mass.cpp  mass.hpp  stiffness.cpp  stiffness.hpp
FVCode3D/src/boundaryCondition/: BC.cpp  BC.hpp
FVCode3D/src/core/: BasicType.hpp  Data.cpp  Data.hpp  TypeDefinition.hpp  basic_type.hpp  chrono.hpp  data.cpp  data.hpp
FVCode3D/src/export/: Export.hpp  ExportCP.cpp  ExportCP.hpp  ExportVTU.cpp  ExportVTU.hpp  export.cpp  export.hpp  exportVTK.cpp  exportVTK.hpp  exportVTU.cpp  exportVTU.hpp
FVCode3D/src/fracture/: Fracture3D.cpp  Fracture3D.hpp  FractureNetwork3D.cpp  FractureNetwork3D.hpp
FVCode3D/src/geometry/: CoordinateSystem.cpp  CoordinateSystem.hpp  Operations.cpp  Operations.hpp  Point3D.cpp  Point3D.hpp  operations.cpp  operations.hpp
FVCode3D/src/import/: Import.cpp  Import.hpp  import.cpp  import.hpp
FVCode3D/src/mesh/: CartesianGrid.cpp  CartesianGrid.hpp  Mesh3D.cpp  Mesh3D.hpp  Properties.cpp  Properties.hpp  RigidMesh.cpp  RigidMesh.hpp  Rigid_Mesh.cpp  Rigid_Mesh.hpp  TetGenWrapper.cpp  TetGenWrapper.hpp  cartesianGrid.cpp  cartesianGrid.hpp
FVCode3D/src/multipleSubRegions/: MultipleSubRegions.cpp  MultipleSubRegions.hpp
FVCode3D/src/problem/: DarcyPseudoSteady.hpp  DarcySteady.hpp  Problem.hpp  darcyPseudoSteady.hpp  darcySteady.hpp  problem.hpp
FVCode3D/src/property/: Permeability.cpp  Permeability.hpp  PermeabilityFactory.hpp  Properties.cpp  Properties.hpp
FVCode3D/src/quadrature/: Quadrature.cpp  Quadrature.hpp  QuadratureRules.cpp  QuadratureRules.hpp
FVCode3D/src/solver/: Solver.cpp  Solver.hpp  solver.cpp  solver.hpp
FVCode3D/src/test/: CMakeLists.txt
FVCode3D/src/tools/: CMakeLists.txt
FVCode3D/src/utility/: Converter.cpp  Matrix.cpp  Matrix.hpp  converter.cpp  converter.hpp
FVCode3D/test/: data.txt  test.cpp
FVCode3D/tools/: CMakeLists.txt
FVCode3D/tools/cartGen/: CMakeLists.txt  cartGen.cpp  data.txt
FVCode3D/tools/converterToSolver/: CMakeLists.txt  converterToSolver.cpp  data.txt
FVCode3D/tools/converterToVTU/: CMakeLists.txt  converterToVTU.cpp  data.txt
(+667 files in other folders)
